--- a/Dashboard-V1.1.5/Collaborate/wraiting/draft.html
+++ b/Dashboard-V1.1.5/Collaborate/wraiting/draft.html
@@ -52,52 +52,52 @@
      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
-          <a href="index.html">
+          <a href="../../index.html">
             <i class="icon-home"></i>
             Home
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
          <li>
-          <a href="task.html">
+          <a href="../../task.html">
             <i class="icon-target"></i>
            Tasks
           </a>
         </li>
          <li>
            <li>
-          <a href="tables.html">
+          <a href="../../tables.html">
             <i class="icon-pin"></i>
             Events
           </a>
         </li>
         <li>
-          <a href="training.html">
+          <a href="../../training.html">
             <i class=" icon-fire"></i>
             Training
           </a>
            <li>
          <li>
-          <a href="gallery.html">
+          <a href="../../gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
           </a>
         </li>
          <li>
            <li>
-          <a href="location.html">
+          <a href="../../location.html">
             <i class="icon-map"></i>
             Members Map
           </a>
         </li>
          <li class="header"><i class="fa fa-circle-o text-danger"></i> Publishing</li>
          <li>
-          <a href="publishing.html">
+          <a href="../../publishing.html">
             <i class="icon-note"></i>
             Collaborate
           </a>
         </li>
-        <li class="active">
+        <li class="../../active">
          <a href="Collaborate/wraiting/draft.html">
             <i class="icon-fire"></i>
             Draft
@@ -105,19 +105,19 @@
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
            <li>
-          <a href="library.html">
+          <a href="../../library.html">
             <i class=" icon-folder"></i>
             Bookcase
           </a>
            <li>
-          <a href="translations.html">
+          <a href="../../translations.html">
             <i class=" icon-grid"></i>
             Translations
           </a>
         </li>
         </li>
          <li>
-          <a href="flip.html">
+          <a href="../../flip.html">
             <i class=" icon-eye"></i>
             Flip Handbook
           </a>
@@ -125,7 +125,7 @@
           </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
-          <a href="faq.html">
+          <a href="../../faq.html">
             <i class="icon-info"></i>
             FAQs
           </a>
