--- a/Dashboard-V1.1.5/task.html
+++ b/Dashboard-V1.1.5/task.html
@@ -227,8 +227,23 @@
                     <tr>
                      <tr></tr>
                     </tr>
-                    <tr>
+                     <tr>
                       <td>4</td>
+                      <td>New "Ghost editor" enviroment</td>
+                      <th><a href="http://polr.me/2v2"target="_blank">github</a></th>
+                      <td>
+                        <div class="progress no-margin">
+                          <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                            <span class="sr-only">Progress</span>
+                          </div><!-- /.progress-bar -->
+                        </div><!-- /.progress -->
+                      </td>
+                    </tr>
+                    <tr>
+                     <tr></tr>
+                    </tr>
+                    <tr>
+                      <td>5</td>
                       <h3><td><span class="label label-danger">G+ Community Engagement</span></td></h3>
                       <th></th>
                       <td>
